Report screen set up

--- a/backend/src/main/resources/templates/header.html
+++ b/backend/src/main/resources/templates/header.html
@@ -75,7 +75,7 @@
           {{#admin}}
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="/user/users">Users</a>
-          <a class="dropdown-item" href="#">Reported Posts</a>
+          <a class="dropdown-item" href="/reports">Reported Posts</a>
           {{/admin}}
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="/logout">Log Out</a>
