--- a/backend/src/main/resources/templates/thread.html
+++ b/backend/src/main/resources/templates/thread.html
@@ -187,6 +187,7 @@
       </div>      
       <!-- Formulario -->
       <form id="uploadForm" action="/t/{{threadName}}/addPost" method="post">
+        <input type="hidden" name="_csrf" value="{{token}}"/>
         <div class="modal-body">
           <!-- Campo de texto -->
           <div class="form-group">
