--- a/backend/src/main/resources/templates/inactive_template.html
+++ b/backend/src/main/resources/templates/inactive_template.html
@@ -1,7 +1,6 @@
 {{>header}}
 <div class="container mt-4 flex-grow-1">
-  <h2>El usuario se encuentra inactivo</h2>
-  <h3>Revise su correo para activar el usuario</h3>
+  <h2>The user is inactive</h2>
+  <h3>Check your email to activate the user</h3>
 </div>
-
 {{>footer}}
