--- a/backend/src/main/resources/templates/reports.html
+++ b/backend/src/main/resources/templates/reports.html
@@ -3,51 +3,14 @@
   <h2 class="text-center">Reported Posts</h2>
 
   <!-- List of Posts -->
-  <div class="list-group">
-    {{#posts}}
-    <div
-      class="list-group-item d-flex align-items-center justify-content-between"
-    >
-      <div class="d-flex align-items-center">
-        <img
-          src="/image/user/{{owner.username}}"
-          class="rounded-circle"
-          style="width: 50px; height: 50px"
-          alt="User Photo"
-        />
-        <div class="ml-3 text-truncate">
-          <strong>{{text}}</strong>
-        </div>
-      </div>
-      <div>
-        <div>
-          <span class="badge badge-primary badge-pill ml-2"
-            >{{reports}} Reports</span
-          >
-          <a
-            class="btn btn-link text-primary p-0 mr-2"
-            title="View Profile"
-            style="text-decoration: none"
-            href="/t/{{thread.name}}"
-          >
-            <i class="fas fa-eye"></i>
-          </a>
-          <button
-            class="btn btn-link text-primary p-0 mr-2"
-            title="Validate"
-            style="text-decoration: none"
-            onclick="validatePost(this);"
-            data-id="{{id}}"
-          >
-            <i class="fas fa-check"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-    {{/posts}}
+  <div class="list-group" id="post-container">
+    {{>spinner_template}}
+    <div class="text-center mt-3">{{>add_more_elements_button_template}}</div>
   </div>
 </div>
 
 <script src="/js/report.js"></script>
+<script src="/js/paginated.js"></script>
+<script src="/js/spinner.js"></script>
 
 {{>footer}}
