Fixed reporting of posts

--- a/backend/src/main/resources/templates/reports.html
+++ b/backend/src/main/resources/templates/reports.html
@@ -3,10 +3,9 @@
   <h2 class="text-center">Reported Posts</h2>
 
   <!-- List of Posts -->
-  <div class="list-group" id="post-container">
-    {{>spinner_template}}
-    <div class="text-center mt-3">{{>add_more_elements_button_template}}</div>
-  </div>
+  <div class="list-group" id="post-container"></div>
+  {{>spinner_template}}
+  <div class="text-center mt-3">{{>add_more_elements_button_template}}</div>
 </div>
 
 <script src="/js/report.js"></script>
