--- a/backend/src/main/resources/templates/error-404_template.html
+++ b/backend/src/main/resources/templates/error-404_template.html
@@ -1,5 +1,5 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-4 flex-grow-1">
   <h1>Oops, the search made was not found.</h1>
 </div>
-{{>footer}}
+{{>footer_template}}
