--- a/backend/src/main/resources/templates/login_error_template.html
+++ b/backend/src/main/resources/templates/login_error_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
   <div class="container mt-5 flex-grow-1">
     <div class="mt-3">
       <h2 class="text-danger">Wrong credentials</h2>
@@ -6,4 +6,4 @@
       <a href="/login" class="btn btn-link">Try again</a>
     </div>
   </div>
-{{>footer}}
+{{>footer_template}}
