--- a/backend/src/main/resources/templates/reports_template.html
+++ b/backend/src/main/resources/templates/reports_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-5 flex-grow-1 mb-3">
   <h2 class="text-center">Reported Posts</h2>
 
@@ -12,4 +12,4 @@
 <script src="/js/paginated.js"></script>
 <script src="/js/spinner.js"></script>
 
-{{>footer}}
+{{>footer_template}}
