--- a/backend/src/main/resources/templates/thread_template.html
+++ b/backend/src/main/resources/templates/thread_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 
 <div class="container mt-4 flex-grow-1">
   <div class="row">
@@ -312,4 +312,4 @@
 <script src="/js/image.js"></script>
 <script src="/js/likes.js"></script>
 <script src="/js/posts.js"></script>
-{{>footer}}
+{{>footer_template}}
