--- a/backend/src/main/resources/templates/already_active_template.html
+++ b/backend/src/main/resources/templates/already_active_template.html
@@ -1,5 +1,5 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-5 flex-grow-1">
   <h1>Your Account is Already Active</h1>
 </div>
-{{>footer}}
+{{>footer_template}}
