--- a/backend/src/main/resources/templates/chart_template.html
+++ b/backend/src/main/resources/templates/chart_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-5 flex-grow-1">
   <h2 class="text-center">Thread and Post Statistics</h2>
   <div class="row justify-content-center mt-4">
@@ -46,4 +46,4 @@
   </div>
 </div>
 <script src="/js/chart.js"></script>
-{{>footer}}
+{{>footer_template}}
