--- a/backend/src/main/resources/templates/edit_profile_template.html
+++ b/backend/src/main/resources/templates/edit_profile_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-5 flex-grow-1">
   <div class="row">
     <div class="col-md-6 offset-md-3">
@@ -48,4 +48,4 @@
   </div>
 </div>
 <script src="/js/image.js"></script>
-{{>footer}}
+{{>footer_template}}
