--- a/backend/src/main/resources/templates/forum_template.html
+++ b/backend/src/main/resources/templates/forum_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-4 flex-grow-1">
   <div class="row">
     <div class="col-md-8 mb-3">
@@ -101,4 +101,4 @@
 <script src="/js/forum.js"></script>
 <script src="/js/paginated.js"></script>
 <script src="/js/spinner.js"></script>
-{{>footer}}
+{{>footer_template}}
