--- a/backend/src/main/resources/templates/home_template.html
+++ b/backend/src/main/resources/templates/home_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-4 flex-grow-1">
     <h2>Categories</h2>
     <div class="row">
@@ -33,4 +33,4 @@
       {{/trending}}
     </div> 
   </div>
-  {{>footer}}
+  {{>footer_template}}
