--- a/backend/src/main/resources/templates/inactive_template.html
+++ b/backend/src/main/resources/templates/inactive_template.html
@@ -1,6 +1,6 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-4 flex-grow-1">
   <h2>The user is inactive</h2>
   <h3>Check your email to activate the user</h3>
 </div>
-{{>footer}}
+{{>footer_template}}
