--- a/backend/src/main/resources/templates/login_template.html
+++ b/backend/src/main/resources/templates/login_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-4 flex-grow-1">
   <div class="row justify-content-center align-items-center">
     <div class="col-md-6 col-lg-4">
@@ -38,4 +38,4 @@
     </div>
   </div>
 </div>
-{{>footer}}
+{{>footer_template}}
