--- a/backend/src/main/resources/templates/register_done_template.html
+++ b/backend/src/main/resources/templates/register_done_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-5 flex-grow-1">
   <div class="mt-3">
     <h3 class="text-success">
@@ -8,4 +8,4 @@
     <a href="login">Try to log In</a>
   </div>
 </div>
-{{>footer}}
+{{>footer_template}}
