--- a/backend/src/main/resources/templates/register_error_template.html
+++ b/backend/src/main/resources/templates/register_error_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-5 flex-grow-1">
   <div class="mt-3">
     <h3 class="text-danger">
@@ -9,4 +9,4 @@
     <a href="/register">Try to sign up again</a>
   </div>
 </div>
-{{>footer}}
+{{>footer_template}}
