--- a/backend/src/main/resources/templates/users_template.html
+++ b/backend/src/main/resources/templates/users_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-5 flex-grow-1 mb-3">
   <form id="userSearchForm">
     <div class="col mb-3">
@@ -29,4 +29,4 @@
 <script src="/js/paginated.js"></script>
 <script src="/js/users.js"></script>
 <script src="/js/spinner.js"></script>
-{{>footer}}
+{{>footer_template}}
