--- a/backend/src/main/resources/templates/register_template.html
+++ b/backend/src/main/resources/templates/register_template.html
@@ -1,4 +1,4 @@
-{{>header}}
+{{>header_template}}
 <div class="container mt-4 flex-grow-1">
   <div class="row justify-content-center align-items-center">
     <div class="col-md-6 col-lg-4">
@@ -42,7 +42,7 @@
               Sign up
             </button>
           </div>
-          <input type="hidden" name="_csrf" value="{{token}}"/>
+          <input type="hidden" name="_csrf" value="{{token}}" />
         </form>
         <hr class="mt-4" />
         <div class="col-12 text-center">
@@ -54,4 +54,4 @@
     </div>
   </div>
 </div>
-{{>footer}}
+{{>footer_template}}
