Angular and Rest Forum logic

--- a/frontend/src/app/components/forum/forum.component.html
+++ b/frontend/src/app/components/forum/forum.component.html
@@ -1,1 +1,18 @@
-<p>forum works!</p>
+<button  *ngIf="loggedIn" type="button">
+  New thread
+</button>
+<div *ngIf="threads.length > 0">
+  <h1>Threads</h1>
+  <ul class="items">
+    <li *ngFor="let thread of threads">
+      <a [routerLink]="['/t', thread.name]">{{thread.name}} {{thread.numberPosts}}</a>
+    </li>
+  </ul>
+
+</div>
+<div *ngIf="threads.length === 0">
+  <h1>No threads yet in this forum :(</h1>
+</div>
+
+
+
