--- a/frontend/src/app/components/forum/forum.component.html
+++ b/frontend/src/app/components/forum/forum.component.html
@@ -1,17 +1,37 @@
-<button  *ngIf="loggedIn" type="button">
-  New thread
-</button>
-  <h1>{{forumName}}</h1>
-<div *ngIf="threads.length > 0">
-  <ul class="items">
-    <li *ngFor="let thread of threads">
-      <a [routerLink]="['/t', thread.name]">{{thread.name}} {{thread.posts.length}}</a>
-    </li>
-  </ul>
+
+<div class="container mt-4 flex-gr">
+  <div class="row">
+    <div class="col-md-8 mb-3">
+      <div class="col-12 d-flex justify-content-between align-items-center mb-3">
+        <h2 class="uppercase"><i class="fas fa-{{forumIcon}} fa-lg mb-1"></i> {{forumName}}</h2>
+        <button *ngIf="loggedIn" type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#uploadModal">
+          New thread
+        </button>
+      </div>
+      <div class="list-group" id="thread-container">
+        <div *ngFor="let thread of threads">
+          <a [routerLink]="['/t', thread.name]" class="list-group-item list-group-item-action d-flex align-items-center">
+            <i>{{thread.name}}</i>
+          </a>
+        </div>
 
 </div>
 <div *ngIf="threads.length === 0">
   <h1>No threads yet in this forum :(</h1>
+</div>
+</div>
+
+<div class="col-md-4 mb-3">
+  <h2 class="">Categories</h2>
+  <div class="list-group mb-3" id="thread-container">
+    <div *ngFor="let forum of forums">
+      <a [routerLink]="['/f', forum.name]" class="list-group-item list-group-item-action d-flex align-items-center">
+        <i class="fas fa-{{forum.icon}} mr-2"></i> {{forum.name}}
+      </a>
+    </div>
+  </div>
+</div>
+</div>
 </div>
 
 
