--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,1 +1,31 @@
-<p>profile works!</p>
+<div class="container mt-5 flex-grow-1">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="text-center">
+        <img src="/image/user/{{userName}}" class="rounded-circle mb-3" alt="Imagen Perfil"
+          style="width: 150px; height: 150px" />
+        <h3>{{userName}}</h3>
+        <!-- <p>{{numberPosts}} Post</p> -->
+        <p>Number of Posts</p>
+        <!-- <p>{{numberThreads}} Threads</p> -->
+        <p>Number of Threads</p>
+
+
+        <button *ngIf="isAdmin" type="button" class="btn btn-link text-decoration-none btn-delete" data-toggle="modal">
+          <i class="fas fa-trash btn-delete"></i> Delete Account
+        </button>
+      </div>
+    </div>
+    <div class="list-group" id="thread-container">
+      <div *ngFor="let thread of threads">
+        <a [routerLink]="['/t', thread.name]" class="list-group-item list-group-item-action d-flex align-items-center">
+          <i>{{thread.name}}</i>
+        </a>
+      </div>
+
+    </div>
+    <div *ngIf="threads.length === 0">
+      <h1>No threads yet by this user :(</h1>
+    </div>
+    </div>
+  </div>
