--- a/frontend/src/app/components/thread/thread.component.html
+++ b/frontend/src/app/components/thread/thread.component.html
@@ -1,1 +1,130 @@
-<p>thread works!</p>
+<div class="container mt-4 flex-grow-1">
+  <div class="row">
+    <div class="col-md-8 mb-3">
+      <div
+        class="col-12 d-flex justify-content-between align-items-center mb-3"
+      >
+        <h2 class="mb-0 col-8">
+          <a href="/f/{{ forumName }}"
+            ><i class="fas fa-{{ forumIcon }} fa-lg"></i
+          ></a>
+          {{ threadName }}
+        </h2>
+        <div></div>
+      </div>
+      <div class="list-group">
+        {{#posts}}
+        <div class="col-12 mb-3">
+          <div class="card no-hover">
+            <div class="card-header bg-white">
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center">
+                  <img
+                    src="/image/user/{{username}}"
+                    alt="Imagen de perfil"
+                    class="rounded-circle mr-2"
+                    style="width: 30px; height: 30px"
+                  />
+                  <h6 class="mb-0">{{username}}</h6>
+                </div>
+                <div class="text-muted">
+                  <small>{{elapsedTime}}</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="card-body">
+              <p class="card-text">{{text}}</p>
+            </div>
+            {{#hasImage}}
+            <div class="d-flex justify-content-center pb-3">
+              <img
+                src="/image/post/{{id}}"
+                class="img-fluid"
+                style="max-width: 50%"
+                alt="..."
+              />
+            </div>
+            {{/hasImage}}
+
+            <div
+              class="card-footer bg-transparent d-flex justify-content-start align-items-center"
+              data-id={{id}}
+              thread-name={{threadName}}
+            >
+              {{#isLiked}}
+              <button
+                id="likes"
+                type="button"
+                class="btn btn-link text-decoration-none text-dark mr-2"
+                onclick="toggleLike(this);"
+                data-liked="true"
+              >
+              <i id="likeIcon" class="fas fa-thumbs-up liked"></i>
+              {{/isLiked}}
+              {{^isLiked}}
+              <button
+                id="likes"
+                type="button"
+                class="btn btn-link text-decoration-none text-dark mr-2"
+                onclick="toggleLike(this);"
+                data-liked="false"
+              >
+                <i id="likeIcon" class="fas fa-thumbs-up"></i>
+                {{/isLiked}} <span id="likeText">{{likes}}</span>
+              </button>
+              <span class="text-muted mx-2">|</span>
+              {{#isDisliked}}
+              <button
+                id="dislikes"
+                type="button"
+                class="btn btn-link text-decoration-none text-dark"
+                onclick="toggleDislike(this);"
+                data-disliked="true"
+              >
+              <i id="dislikeIcon" class="fas fa-thumbs-down disliked"></i>     
+              {{/isDisliked}}
+              {{^isDisliked}}
+              <button
+                id="dislikes"
+                type="button"
+                class="btn btn-link text-decoration-none text-dark"
+                onclick="toggleDislike(this);"
+                data-disliked="false"
+              >
+              <i id="dislikeIcon" class="fas fa-thumbs-down"></i>
+              {{/isDisliked}} <span id="dislikeText">{{dislikes}}</span>
+              </button>
+              <div class="ml-auto"></div>
+              {{#logged}}
+              <button type="button" class="btn btn-link text-decoration-none"
+              id="reporter"
+              onclick="reportPost(this);">
+                <i class="fas fa-exclamation-circle"></i>
+              </button>
+              {{/logged}} {{#isOwner}}
+              <button
+                id="editer"
+                type="button"
+                class="btn btn-link text-decoration-none text-dark"
+                data-toggle="modal"
+                data-target="#updateModal"
+                onclick="editPost(this);"
+              >
+                <i class="fas fa-edit"></i>
+              </button>
+              <button type="button" class="btn btn-link text-decoration-none"
+              id="deleter"
+              onclick="deletePost(this);">
+                <i class="fas fa-trash btn-delete"></i>
+              </button>
+              {{/isOwner}}
+            </div>
+          </div>
+        </div>
+        {{/posts}}
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
