--- a/frontend/src/app/components/thread/thread.component.html
+++ b/frontend/src/app/components/thread/thread.component.html
@@ -13,97 +13,89 @@
         <div></div>
       </div>
       <div class="list-group">
-        {{#posts}}
-        <div class="col-12 mb-3">
+        <div *ngFor="let post of posts" class="col-12 mb-3">
           <div class="card no-hover">
             <div class="card-header bg-white">
               <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center">
                   <img
-                    src="/image/user/{{username}}"
+                    src="/image/user/{{post.author}}"
                     alt="Imagen de perfil"
                     class="rounded-circle mr-2"
                     style="width: 30px; height: 30px"
                   />
-                  <h6 class="mb-0">{{username}}</h6>
+                  <h6 class="mb-0">{{post.author}}</h6>
                 </div>
                 <div class="text-muted">
-                  <small>{{elapsedTime}}</small>
+                  <small>{{post.elapsedTime}}</small>
                 </div>
               </div>
             </div>
 
             <div class="card-body">
-              <p class="card-text">{{text}}</p>
+              <p class="card-text">{{post.text}}</p>
             </div>
-            {{#hasImage}}
-            <div class="d-flex justify-content-center pb-3">
+            <div *ngIf="post.hasImage" class="d-flex justify-content-center pb-3">
               <img
-                src="/image/post/{{id}}"
+                src="/api/posts/{{post.id}}/image"
                 class="img-fluid"
                 style="max-width: 50%"
                 alt="..."
               />
             </div>
-            {{/hasImage}}
 
             <div
               class="card-footer bg-transparent d-flex justify-content-start align-items-center"
-              data-id={{id}}
-              thread-name={{threadName}}
             >
-              {{#isLiked}}
               <button
+                *ngIf="post.isLiked"
                 id="likes"
                 type="button"
                 class="btn btn-link text-decoration-none text-dark mr-2"
                 onclick="toggleLike(this);"
                 data-liked="true"
               >
-              <i id="likeIcon" class="fas fa-thumbs-up liked"></i>
-              {{/isLiked}}
-              {{^isLiked}}
+              <i *ngIf="post.isLiked" id="likeIcon" class="fas fa-thumbs-up liked"></i>
               <button
+                *ngIf="!post.isLiked"
                 id="likes"
                 type="button"
                 class="btn btn-link text-decoration-none text-dark mr-2"
                 onclick="toggleLike(this);"
                 data-liked="false"
               >
-                <i id="likeIcon" class="fas fa-thumbs-up"></i>
-                {{/isLiked}} <span id="likeText">{{likes}}</span>
+                <i *ngIf="!post.isLiked" id="likeIcon" class="fas fa-thumbs-up"></i>
+                <span id="likeText">{{post.likes}}</span>
               </button>
               <span class="text-muted mx-2">|</span>
-              {{#isDisliked}}
               <button
+                *ngIf="post.isDisliked"
                 id="dislikes"
                 type="button"
                 class="btn btn-link text-decoration-none text-dark"
                 onclick="toggleDislike(this);"
                 data-disliked="true"
               >
-              <i id="dislikeIcon" class="fas fa-thumbs-down disliked"></i>     
-              {{/isDisliked}}
-              {{^isDisliked}}
+              <i *ngIf="post.isDisliked" id="dislikeIcon" class="fas fa-thumbs-down disliked"></i>
               <button
+              *ngIf="!post.isDisliked"
                 id="dislikes"
                 type="button"
                 class="btn btn-link text-decoration-none text-dark"
                 onclick="toggleDislike(this);"
                 data-disliked="false"
               >
-              <i id="dislikeIcon" class="fas fa-thumbs-down"></i>
-              {{/isDisliked}} <span id="dislikeText">{{dislikes}}</span>
+              <i *ngIf="!post.isDisliked" id="dislikeIcon" class="fas fa-thumbs-down"></i>
+              <span id="dislikeText">{{post.dislikes}}</span>
               </button>
               <div class="ml-auto"></div>
-              {{#logged}}
-              <button type="button" class="btn btn-link text-decoration-none"
+              <button *ngIf="loggedIn" type="button" class="btn btn-link text-decoration-none"
               id="reporter"
               onclick="reportPost(this);">
                 <i class="fas fa-exclamation-circle"></i>
               </button>
-              {{/logged}} {{#isOwner}}
               <button
+                *ngIf="post.isAuthor"
                 id="editer"
                 type="button"
                 class="btn btn-link text-decoration-none text-dark"
@@ -113,18 +105,9 @@
               >
                 <i class="fas fa-edit"></i>
               </button>
-              <button type="button" class="btn btn-link text-decoration-none"
+              <button
+              *ngIf="post.isAuthor" type="button" class="btn btn-link text-decoration-none"
               id="deleter"
               onclick="deletePost(this);">
                 <i class="fas fa-trash btn-delete"></i>
               </button>
-              {{/isOwner}}
-            </div>
-          </div>
-        </div>
-        {{/posts}}
-      </div>
-    </div>
-    </div>
-  </div>
-</div>
