--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="col-md-4">
       <div class="text-center">
-      <img [src]="userimage" alt="User Image">
+      <img [src]="'/api/users/' + userId + '/image'" alt="User Image" class="rounded-circle"
+          alt="Profile"
+          style="width: 120px; height: 120px">
         <h3>{{userName}}</h3>
         <!-- <p>{{numberPosts}} Post</p> -->
         <p>Number of Posts</p>
