--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -2,9 +2,8 @@
   <div class="row">
     <div class="col-md-4">
       <div class="text-center">
-      <img [src]="'/api/users/' + userId + '/image'" alt="User Image" class="rounded-circle"
-          alt="Profile"
-          style="width: 120px; height: 120px">
+      <img [src]="'/api/users/' + userId + '/image'" alt="User Image" class="rounded-circle mb-3"
+          style="width: 150px; height: 150px">
         <h3>{{userName}}</h3>
         <!-- <p>{{numberPosts}} Post</p> -->
         <p>Number of Posts</p>
