--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-md-4">
       <div class="text-center">
-        <img src="/image/user/{{userName}}" class="rounded-circle mb-3" alt="Imagen Perfil"
-          style="width: 150px; height: 150px" />
+      <img [src]="'/api/users/' + userId + '/image'" alt="User Image" class="rounded-circle mb-3"
+          style="width: 150px; height: 150px">
         <h3>{{userName}}</h3>
         <!-- <p>{{numberPosts}} Post</p> -->
         <p>Number of Posts</p>
@@ -16,16 +16,21 @@
         </button>
       </div>
     </div>
+    <div *ngIf="threads.length === 0; else otherCont">
+      <h1>No threads yet by this user :(</h1>
+    </div>
+    <ng-template #otherCont >
+      <div>
+      <h2>Threads</h2>
     <div class="list-group" id="thread-container">
       <div *ngFor="let thread of threads">
         <a [routerLink]="['/t', thread.name]" class="list-group-item list-group-item-action d-flex align-items-center">
           <i>{{thread.name}}</i>
         </a>
       </div>
+    </div>
+      </div>
 
-    </div>
-    <div *ngIf="threads.length === 0">
-      <h1>No threads yet by this user :(</h1>
-    </div>
+    </ng-template>
     </div>
   </div>
