--- a/frontend/src/app/components/thread/thread.component.html
+++ b/frontend/src/app/components/thread/thread.component.html
@@ -4,14 +4,12 @@
       <div
         class="col-12 d-flex justify-content-between align-items-center mb-3"
       >
-        <div class="mb-0 col-8">
+        <h2 class="mb-0 col-8">
           <a href="/f/{{ thread?.forum?.name }}"
             ><i class="fas fa-{{ thread?.forum?.icon }} fa-lg"></i
           ></a>
-          <h2>
-            {{ thread?.name }}
-          </h2>
-        </div>
+          {{ thread?.name }}
+        </h2>
         <div></div>
       </div>
       <div class="list-group">
@@ -19,6 +17,9 @@
           <app-post [post]="post"></app-post>
         </div>
       </div>
+    </div>
+    <div class="col-md-4 mb-3">
+      <app-categories></app-categories>
     </div>
   </div>
 </div>
