--- a/frontend/src/app/components/post/post.component.html
+++ b/frontend/src/app/components/post/post.component.html
@@ -11,7 +11,7 @@
         <h6 class="mb-0">{{ post?.owner?.username }}</h6>
       </div>
       <div class="text-muted">
-        <small>{{ post?.createdAt }}</small>
+        <small>{{ elapsedTime }}</small>
       </div>
     </div>
   </div>
@@ -19,12 +19,11 @@
   <div class="card-body">
     <p class="card-text">{{ post?.text }}</p>
   </div>
-  <div *ngIf="hasImage" class="d-flex justify-content-center pb-3">
+  <div class="d-flex justify-content-center pb-3" *ngIf="hasImage">
     <img
       src="/api/posts/{{ post?.id }}/image"
       class="img-fluid"
       style="max-width: 50%"
-      alt="..."
     />
   </div>
 
