--- a/frontend/src/app/components/forum/forum.component.html
+++ b/frontend/src/app/components/forum/forum.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="list-group" id="thread-container">
         <div *ngFor="let thread of threads">
-          <a [routerLink]="['/t', thread.name]" class="list-group-item list-group-item-action d-flex align-items-center">
+          <a [routerLink]="['/t', thread.id]" class="list-group-item list-group-item-action d-flex align-items-center">
             <i>{{thread.name}}</i>
           </a>
         </div>
