--- a/frontendFix/src/app/components/home/home.component.html
+++ b/frontendFix/src/app/components/home/home.component.html
@@ -1,1 +1,36 @@
-<p>home works!</p>
+    
+<div class="container mt-4 flex-grow-1">
+    <h2>Categories</h2>
+    <div class="row">
+        <ng-container *ngIf="$forums | async as forums; else noforums">
+            <div *ngFor="let forum of forums" class="col-md-4 mb-3">
+                <a [routerLink]="['/f', forum.name]" class="card text-decoration-none text-dark">
+                    <div class="card-body text-center">
+                        <i class="fas fa-{{forum.icon}} fa-3x"> </i>
+                        <h5 class="card-title mt-2">{{forum.name}}</h5>
+                    </div>
+                </a>
+            </div>
+        </ng-container>
+        <ng-template #noforums>
+            <div class="card-body text-center"><h5>No categories yet</h5></div>
+        </ng-template>
+    </div>
+
+    <h2 class="mt-4">Trending Categories</h2>
+    <div class="row">
+        <ng-container *ngIf="$trending | async as trending; else notrending">
+            <div *ngFor="let t of trending" class="col-md-4 mb-3">
+                <a [routerLink]="['/f', t.name]" class="card text-decoration-none text-dark">
+                    <div class="card-body text-center">
+                        <i class="fas fa-{{t.icon}} fa-3x"> </i>
+                        <h5 class="card-title mt-2">{{t.name}}</h5>
+                    </div>
+                </a>
+            </div>
+        </ng-container>
+        <ng-template #notrending>
+            <div class="card-body text-center"><h5>No trending categories yet</h5></div>
+        </ng-template>
+    </div>
+</div>
