--- a/frontendFix/src/app/components/navbar/navbar.component.html
+++ b/frontendFix/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
   <a class="navbar-brand" routerLink="/">Inforum</a>
   <div *ngIf="!isLoggedIn; else loggedTemplate">
     <button
