--- a/frontendFix/src/app/components/navbar/navbar.component.html
+++ b/frontendFix/src/app/components/navbar/navbar.component.html
@@ -57,7 +57,7 @@
         <a class="dropdown-item" routerLink="/chart">Statistics</a>
         <div *ngIf="isAdmin">
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" routerLink="/user/users">Users</a>
+          <a class="dropdown-item" routerLink="/users">Users</a>
           <a class="dropdown-item" routerLink="/reports">Reported Posts</a>
         </div>
         <div class="dropdown-divider"></div>
